<resources>
    <string name="app_name">ToRideOrNotToRide</string>

    <string name="action_settings">Settings</string>
    <string name="logo">To\nRide\nOr\nNot\nTo\nRide</string>
    <string name="status">status pending</string>
    <string name="detailsButton">Details</string>
    <string name="modifyButton">Modify</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="showZipCodeDb">ShowZipCodeDB</string>
    <string name="title_activity_modify">ModifyActivity</string>
    <string name="modifyTitle">Modify</string>
    <string name="detailsTitle">Details</string>
    <string name="addButton">Add</string>
    <string name="removeButton">Remove</string>
    <string name="title_activity_zip_codes">ZipCodesActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="zipCodeText">ZipCode</string>
    <string name="cityText">City</string>
    <string name="latitudeText">Latitude</string>
    <string name="longitudeText">Longitude</string>
    <string name="title_activity_get_zip_code">GetZipCodeActivity</string>
    <string name="SubmitButton">OK</string>
    <string name="okButton">OK</string>
    <string name="zipCodeHint">Enter ZipCode</string>
    <string name="poweredByForecast">Powered By Forecast</string>
    <string name="timeText">Time</string>
    <string name="weatherText">Weather</string>
    <string name="refreshText">REFRESH</string>
</resources>
