<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="applications.haywood.torideornottoride.ModifyActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/modifyTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <fragment
        android:id="@+id/weatherFragment"
        android:name="applications.haywood.torideornottoride.WeatherFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/addButton"
        android:layout_below="@+id/textView7"
        tools:layout="@layout/fragment_zip_codes" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forecast"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="GetZipCode"
        android:text="@string/addButton" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forecast"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="RemoveSelectedZipCodes"
        android:text="@string/removeButton" />

    <TextView
        android:id="@+id/forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="ShowForecastWebsite"
        android:text="@string/poweredByForecast"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView"
        android:text="@string/zipCodeText"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Space
        android:id="@+id/space4"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weatherFragment"
        android:layout_toEndOf="@+id/space4"
        android:layout_toRightOf="@+id/space4"
        android:text="@string/timeText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:id="@+id/space5"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_alignTop="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:layout_toRightOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/space5"
        android:layout_toEndOf="@+id/space5"
        android:layout_toRightOf="@+id/space5"
        android:text="@string/weatherText"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>
