<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/refreshButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/status"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forecast"
        android:layout_centerHorizontal="true"
        android:onClick="ShowModify"
        android:text="@string/modifyButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/space3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@mipmap/logo" />

    <Space
        android:id="@+id/space3"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_above="@+id/statusTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="ShowForecastWebsite"
        android:text="@string/poweredByForecast"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/modifyButton"
        android:layout_centerHorizontal="true"
        android:onClick="UpdateAllWeather"
        android:text="@string/refreshText" />
    />

</RelativeLayout>
